[project]
name = 'python-template'
description = 'This is a python template that we use to create a new python template. Change the description here.'
readme = 'README.md'
version = '0.1.0'
requires-python = '>=3.11'
dependencies = ['numpy']  # Doesn't need 3rd-party numpy. Just a placeholder as an example.

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

# Exclude tests from the distribution
[tool.setuptools.packages.find]
exclude = ['tests']

# Include this configruation so that we can import the module we want to test.
[tool.pytest.ini_options]
pythonpath = ['src', ]
